Add support for String, Array and RegEx type fields