@@ -2,6 +2,7 @@ package com.crd.cit.m2521.service;
 
 import com.crd.cit.m2521.model.DocumentInfer;
 import com.crd.cit.m2521.model.Field;
+import com.crd.cit.m2521.model.FieldType;
 import com.crd.cit.m2521.model.NodeCondition;
 import com.crd.cit.m2521.model.Value;
 import com.crd.cit.m2521.model.ValuesNodes;
@@ -23,7 +24,6 @@ class TemplateInferServiceTest {
     private final ObjectMapper objectMapper = new ObjectMapper();
     private final TemplateInferService templateInferService = new CustomTemplateInferService();
 
-    // Custom class that overrides loadMatchingConfig to return our test configuration
     private static class CustomTemplateInferService extends TemplateInferService {
         @Override
         public DocumentInfer loadMatchingConfig() {
@@ -31,9 +31,9 @@ class TemplateInferServiceTest {
         }
     }
 
+    // Original test scenarios
     @Test
     void processDocumentInference_Scenario1_SabahGBP() throws Exception {
-        // Arrange
         String crimsJson = """
                 {
                   "security": {
@@ -43,17 +43,12 @@ class TemplateInferServiceTest {
                 }
                 """;
         JsonNode crimsJsonNode = objectMapper.readTree(crimsJson);
-
-        // Act
         String result = templateInferService.processDocumentInference(crimsJsonNode);
-
-        // Assert
         assertEquals("TEMPLATE_A", result);
     }
 
     @Test
     void processDocumentInference_Scenario2_SabahUSD() throws Exception {
-        // Arrange
         String crimsJson = """
                 {
                   "security": {
@@ -63,17 +58,12 @@ class TemplateInferServiceTest {
                 }
                 """;
         JsonNode crimsJsonNode = objectMapper.readTree(crimsJson);
-
-        // Act
         String result = templateInferService.processDocumentInference(crimsJsonNode);
-
-        // Assert
         assertEquals("TEMPLATE_B", result);
     }
 
     @Test
     void processDocumentInference_Scenario3_ManjitWeekly() throws Exception {
-        // Arrange
         String crimsJson = """
                 {
                   "security": {
@@ -85,17 +75,12 @@ class TemplateInferServiceTest {
                 }
                 """;
         JsonNode crimsJsonNode = objectMapper.readTree(crimsJson);
-
-        // Act
         String result = templateInferService.processDocumentInference(crimsJsonNode);
-
-        // Assert
         assertEquals("TEMPLATE_C", result);
     }
 
     @Test
     void processDocumentInference_Scenario4_ManjitMonthly() throws Exception {
-        // Arrange
         String crimsJson = """
                 {
                   "security": {
@@ -107,17 +92,12 @@ class TemplateInferServiceTest {
                 }
                 """;
         JsonNode crimsJsonNode = objectMapper.readTree(crimsJson);
-
-        // Act
         String result = templateInferService.processDocumentInference(crimsJsonNode);
-
-        // Assert
         assertEquals("TEMPLATE_D", result);
     }
 
     @Test
     void processDocumentInference_Scenario5_ManjitWildcard() throws Exception {
-        // Arrange
         String crimsJson = """
                 {
                   "security": {
@@ -129,17 +109,12 @@ class TemplateInferServiceTest {
                 }
                 """;
         JsonNode crimsJsonNode = objectMapper.readTree(crimsJson);
-
-        // Act
         String result = templateInferService.processDocumentInference(crimsJsonNode);
-
-        // Assert
         assertEquals("TEMPLATE_E", result);
     }
 
     @Test
     void processDocumentInference_NoMatchFound() throws Exception {
-        // Arrange
         String crimsJson = """
                 {
                   "security": {
@@ -149,12 +124,74 @@ class TemplateInferServiceTest {
                 }
                 """;
         JsonNode crimsJsonNode = objectMapper.readTree(crimsJson);
-
-        // Act
         String result = templateInferService.processDocumentInference(crimsJsonNode);
-
-        // Assert
         assertNull(result);
+    }
+
+    // New test scenarios for array matching
+    @Test
+    void processDocumentInference_Scenario7_MultiCurrencyMatch() throws Exception {
+        String crimsJson = """
+                {
+                  "security": {
+                    "secTypCd": "Bond",
+                    "localCurrency": ["USD", "EUR"],
+                    "markets": ["US", "EU"]
+                  }
+                }
+                """;
+        JsonNode crimsJsonNode = objectMapper.readTree(crimsJson);
+        String result = templateInferService.processDocumentInference(crimsJsonNode);
+        assertEquals("TEMPLATE_MULTI_CURRENCY", result);
+    }
+
+    @Test
+    void processDocumentInference_Scenario8_SingleValueInArray() throws Exception {
+        String crimsJson = """
+                {
+                  "security": {
+                    "secTypCd": "Bond",
+                    "localCurrency": ["USD"],
+                    "markets": ["US"]
+                  }
+                }
+                """;
+        JsonNode crimsJsonNode = objectMapper.readTree(crimsJson);
+        String result = templateInferService.processDocumentInference(crimsJsonNode);
+        assertEquals("TEMPLATE_MULTI_CURRENCY", result);
+    }
+
+    // New test scenarios for regex matching
+    @Test
+    void processDocumentInference_Scenario9_RegexPaymentFreq() throws Exception {
+        String crimsJson = """
+                {
+                  "security": {
+                    "secTypCd": "Manjit",
+                    "localCurrency": "GBP",
+                    "index": "Manjit",
+                    "paymentFreq": "Weekly12"
+                  }
+                }
+                """;
+        JsonNode crimsJsonNode = objectMapper.readTree(crimsJson);
+        String result = templateInferService.processDocumentInference(crimsJsonNode);
+        assertEquals("TEMPLATE_WEEKLY_NUMBERED", result);
+    }
+
+    @Test
+    void processDocumentInference_Scenario10_RegexSecurityCode() throws Exception {
+        String crimsJson = """
+                {
+                  "security": {
+                    "secTypCd": "SAB2023",
+                    "localCurrency": "USD"
+                  }
+                }
+                """;
+        JsonNode crimsJsonNode = objectMapper.readTree(crimsJson);
+        String result = templateInferService.processDocumentInference(crimsJsonNode);
+        assertEquals("TEMPLATE_SAB_PATTERN", result);
     }
 
     private static DocumentInfer createMatchingConfig() {
@@ -163,62 +200,101 @@ class TemplateInferServiceTest {
 
         // Set up fields for root node
         List<Field> rootFields = Arrays.asList(
-                createField("secTypCd", "security.secTypCd"),
-                createField("currency", "security.localCurrency")
+                createField("secTypCd", "security.secTypCd", FieldType.REGEX),
+                createField("currency", "security.localCurrency", FieldType.ARRAY)
         );
         rootNode.setFields(rootFields);
 
-        // Create Sabah nodes (Scenarios 1 and 2)
-        ValuesNodes sabahGbpNode = createValuesNode(
-                Arrays.asList(
-                        createValue("secTypCd", List.of("Sabah")),
-                        createValue("currency", List.of("GBP"))
+        // Create all nodes
+        List<ValuesNodes> allNodes = Arrays.asList(
+                // Original Sabah nodes
+                createValuesNode(
+                        Arrays.asList(
+                                createValue("secTypCd", List.of("Sabah")),
+                                createValue("currency", List.of("GBP"))
+                        ),
+                        "TEMPLATE_A"
                 ),
-                "TEMPLATE_A"
+                createValuesNode(
+                        Arrays.asList(
+                                createValue("secTypCd", List.of("Sabah")),
+                                createValue("currency", List.of("USD"))
+                        ),
+                        "TEMPLATE_B"
+                ),
+                // Original Manjit node with nested conditions
+                createManjitNode(),
+                // New array matching node
+                createValuesNode(
+                        Arrays.asList(
+                                createValue("secTypCd", List.of("Bond")),
+                                createValue("currency", Arrays.asList("USD", "EUR"))
+                        ),
+                        "TEMPLATE_MULTI_CURRENCY"
+                ),
+                // New regex matching node for SAB pattern
+                createValuesNode(
+                        Arrays.asList(
+                                createValue("secTypCd", List.of("^SAB\\d{4}$")),
+                                createValue("currency", List.of("USD"))
+                        ),
+                        "TEMPLATE_SAB_PATTERN"
+                )
         );
 
-        ValuesNodes sabahUsdNode = createValuesNode(
-                Arrays.asList(
-                        createValue("secTypCd", List.of("Sabah")),
-                        createValue("currency", List.of("USD"))
-                ),
-                "TEMPLATE_B"
-        );
+        rootNode.setChildren(allNodes);
+        documentInfer.setNode(rootNode);
 
-        // Create Manjit node with nested conditions
+        return documentInfer;
+    }
+
+    private static ValuesNodes createManjitNode() {
+        // Create Manjit's nested node structure
         NodeCondition manjitNode = new NodeCondition();
         manjitNode.setFields(Arrays.asList(
-                createField("index", "security.index"),
-                createField("paymentFreq", "security.paymentFreq")
+                createField("index", "security.index", FieldType.STRING),
+                createField("paymentFreq", "security.paymentFreq", FieldType.REGEX)
         ));
 
-        // Create Manjit's children (Scenarios 3, 4, and 5)
-        ValuesNodes manjitWeeklyNode = createValuesNode(
-                Arrays.asList(
-                        createValue("index", List.of("Manjit")),
-                        createValue("paymentFreq", List.of("Weekly"))
+        // Create Manjit's children nodes
+        List<ValuesNodes> manjitChildren = Arrays.asList(
+                // Original Weekly node
+                createValuesNode(
+                        Arrays.asList(
+                                createValue("index", List.of("Manjit")),
+                                createValue("paymentFreq", List.of("Weekly"))
+                        ),
+                        "TEMPLATE_C"
                 ),
-                "TEMPLATE_C"
+                // Original Monthly node
+                createValuesNode(
+                        Arrays.asList(
+                                createValue("index", List.of("Manjit")),
+                                createValue("paymentFreq", List.of("Monthly"))
+                        ),
+                        "TEMPLATE_D"
+                ),
+                // New Weekly with number pattern
+                createValuesNode(
+                        Arrays.asList(
+                                createValue("index", List.of("Manjit")),
+                                createValue("paymentFreq", List.of("Weekly\\d+"))
+                        ),
+                        "TEMPLATE_WEEKLY_NUMBERED"
+                ),
+                // Original wildcard node
+                createValuesNode(
+                        Arrays.asList(
+                                createValue("index", List.of("Manjit")),
+                                createValue("paymentFreq", List.of("*"))
+                        ),
+                        "TEMPLATE_E"
+                )
         );
 
-        ValuesNodes manjitMonthlyNode = createValuesNode(
-                Arrays.asList(
-                        createValue("index", List.of("Manjit")),
-                        createValue("paymentFreq", List.of("Monthly"))
-                ),
-                "TEMPLATE_D"
-        );
+        manjitNode.setChildren(manjitChildren);
 
-        ValuesNodes manjitWildcardNode = createValuesNode(
-                Arrays.asList(
-                        createValue("index", List.of("Manjit")),
-                        createValue("paymentFreq", List.of("*"))
-                ),
-                "TEMPLATE_E"
-        );
-
-        manjitNode.setChildren(Arrays.asList(manjitWeeklyNode, manjitMonthlyNode, manjitWildcardNode));
-
+        // Create and return the parent Manjit node
         ValuesNodes manjitParentNode = createValuesNode(
                 Arrays.asList(
                         createValue("secTypCd", List.of("Manjit")),
@@ -228,18 +304,19 @@ class TemplateInferServiceTest {
         );
         manjitParentNode.setNode(manjitNode);
 
-        // Set up root node's children
-        rootNode.setChildren(Arrays.asList(sabahGbpNode, sabahUsdNode, manjitParentNode));
-        documentInfer.setNode(rootNode);
-
-        return documentInfer;
+        return manjitParentNode;
     }
 
-    private static Field createField(String name, String field) {
+    private static Field createField(String name, String field, FieldType type) {
         Field f = new Field();
         f.setName(name);
         f.setField(field);
+        f.setType(type);
         return f;
+    }
+
+    private static Field createField(String name, String field) {
+        return createField(name, field, FieldType.STRING);
     }
 
     private static Value createValue(String name, List<String> value) {
